# alfred

./: .gitignore  ARCHITECTURE.md  Cargo.toml
crates/alfred-app/: Cargo.toml
crates/alfred-app/src/: app.rs  main.rs  renderer.rs
crates/alfred-app/src/platform/: linux.rs  mod.rs  windows.rs
crates/alfred-app/src/terminal/: emulator.rs  pty.rs
crates/alfred-app/src/workspace/: layout.rs  manager.rs  mod.rs  pane.rs
crates/alfred-cli/: Cargo.toml
crates/alfred-cli/src/: main.rs
docs/: phase1-scaffold.md  phase2-multiplexing.md
memory/: MEMORY.md  project_alfred.md  user_profile.md
