[workspace]
members = ["crates/alfred-app", "crates/alfred-cli"]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
clap       = { version = "4", features = ["derive"] }
