[package]
name    = "alfred-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alfred"
path = "src/main.rs"

[dependencies]
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
